Actualización de index.html con header dinámico

--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Construcciones AYC | Estructuras Metálicas</title>
-    <link rel="stylesheet" href="style.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Construcciones AYC | Estructuras Metálicas</title>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<!-- HEADER PROFESIONAL -->
+<!-- HEADER -->
 <header class="header">
     <div class="header-container">
         <div class="logo-area">
@@ -18,7 +19,6 @@
                 <p>Estructuras metálicas y construcción profesional</p>
             </div>
         </div>
-
         <nav class="nav">
             <a href="#inicio">Inicio</a>
             <a href="#servicios">Servicios</a>
@@ -29,105 +29,67 @@
     </div>
 </header>
 
-<!-- HERO / PORTADA -->
+<!-- HERO -->
 <section class="hero" id="inicio">
     <div class="hero-overlay">
-        <h2>CONSTRUCCIÓN Y ESTRUCTURAS METÁLICAS</h2>
-        <p>
-            Compromiso, calidad y profesionalismo en cada proyecto.
-            Desarrollamos soluciones estructurales sólidas y duraderas.
-        </p>
+        <h2>Construcción y Estructuras Metálicas</h2>
+        <p>Compromiso, calidad y profesionalismo en cada proyecto. Soluciones estructurales sólidas y duraderas.</p>
         <a href="#contacto" class="btn-principal">Solicitar Cotización</a>
     </div>
 </section>
 
-<!-- SECCIÓN EMPRESA -->
+<!-- SOBRE NUESTRA EMPRESA -->
 <section class="empresa-section" id="empresa">
     <div class="empresa-container">
         <div class="empresa-texto">
-            <h2>Sobre Nuestra Empresa</h2>
-            <p>
-                Construcciones AYC SPA es una empresa dedicada a la fabricación,
-                montaje y ejecución de proyectos en estructuras metálicas y obras
-                de construcción. Nos caracterizamos por entregar trabajos de alta
-                calidad, cumpliendo plazos y estándares exigentes en cada proyecto.
+            <h2 class="empresa-titulo">Sobre Nuestra Empresa</h2>
+            <p class="empresa-desc">
+                En <strong>Construcciones AYC SPA</strong> nos dedicamos a diseñar, fabricar y montar estructuras metálicas de alta calidad. Cada proyecto es tratado con profesionalismo, cumpliendo plazos y estándares exigentes.
             </p>
-            <p>
-                Nuestro enfoque está basado en la responsabilidad, la seguridad
-                en terreno y la eficiencia técnica, garantizando resultados
-                sólidos que responden a las necesidades reales de cada cliente.
+            <p class="empresa-desc">
+                Nuestro equipo combina experiencia técnica con innovación, garantizando resultados sólidos y soluciones adaptadas a las necesidades reales de cada cliente.
             </p>
         </div>
-
         <div class="empresa-img">
-            <img src="images/obra3.jpg" alt="Trabajo en obra">
+            <img src="images/obra3.jpg" alt="Proyecto destacado">
         </div>
     </div>
 </section>
 
-<!-- SERVICIOS PROFESIONALES -->
+<!-- SERVICIOS -->
 <section class="servicios" id="servicios">
-    <h2 class="titulo">NUESTROS SERVICIOS</h2>
-
+    <h2 class="titulo">Nuestros Servicios</h2>
     <div class="servicios-grid">
         <div class="servicio-card">
-            <h3>COMPROMISO Y CALIDAD</h3>
-            <p>
-                Nuestra pasión por la construcción nos distingue. Trabajamos con
-                altos estándares de calidad cumpliendo plazos y optimizando costos,
-                garantizando resultados profesionales en cada obra ejecutada.
-            </p>
+            <h3>Compromiso y Calidad</h3>
+            <p>Trabajamos con altos estándares, cumpliendo plazos y optimizando costos, garantizando resultados profesionales.</p>
         </div>
-
         <div class="servicio-card">
-            <h3>ASESORÍA TÉCNICA</h3>
-            <p>
-                Asesoramos desde el primer momento, analizando cada idea del cliente
-                y transformándola en un proyecto viable, eficiente y estructuralmente
-                seguro.
-            </p>
+            <h3>Asesoría Técnica</h3>
+            <p>Analizamos cada idea del cliente y la transformamos en un proyecto seguro, eficiente y viable.</p>
         </div>
-
         <div class="servicio-card">
-            <h3>MANO DE OBRA CALIFICADA</h3>
-            <p>
-                Contamos con personal especializado en fabricación, soldadura y
-                montaje de estructuras metálicas, con experiencia en terreno y
-                profesionalismo en cada etapa del proyecto.
-            </p>
+            <h3>Mano de Obra Calificada</h3>
+            <p>Personal especializado en fabricación, soldadura y montaje de estructuras metálicas, con experiencia y profesionalismo.</p>
         </div>
-
         <div class="servicio-card">
-            <h3>ESTRUCTURAS METÁLICAS</h3>
-            <p>
-                Fabricación y montaje de galpones, estructuras industriales,
-                techumbres y soluciones metálicas adaptadas a cada necesidad.
-            </p>
+            <h3>Estructuras Metálicas</h3>
+            <p>Fabricación y montaje de galpones, techumbres y soluciones metálicas adaptadas a cada necesidad.</p>
         </div>
-
         <div class="servicio-card">
-            <h3>MONTAJE TERMOACÚSTICO</h3>
-            <p>
-                Instalación de soluciones termoacústicas para proyectos industriales
-                y comerciales, garantizando eficiencia térmica y durabilidad.
-            </p>
+            <h3>Montaje Termoacústico</h3>
+            <p>Soluciones termoacústicas industriales y comerciales que garantizan eficiencia térmica y durabilidad.</p>
         </div>
-
         <div class="servicio-card">
-            <h3>PROYECTOS A MEDIDA</h3>
-            <p>
-                Diseñamos y ejecutamos proyectos personalizados según los
-                requerimientos del cliente, optimizando materiales, costos y tiempos
-                de ejecución.
-            </p>
+            <h3>Proyectos a Medida</h3>
+            <p>Diseñamos proyectos personalizados, optimizando materiales, costos y tiempos de ejecución.</p>
         </div>
     </div>
 </section>
 
-<!-- GALERÍA DE PROYECTOS (SIN OBRA 7) -->
+<!-- PROYECTOS -->
 <section class="proyectos" id="proyectos">
-    <h2 class="titulo">NUESTROS PROYECTOS</h2>
-
+    <h2 class="titulo">Nuestros Proyectos</h2>
     <div class="galeria-grid">
         <img src="images/obra1.jpeg" alt="Proyecto construcción 1">
         <img src="images/obra2.jpg" alt="Proyecto construcción 2">
@@ -135,75 +97,62 @@
         <img src="images/obra4.jpg" alt="Proyecto construcción 4">
         <img src="images/obra5.jpg" alt="Proyecto construcción 5">
         <img src="images/obra6.jpg" alt="Proyecto construcción 6">
-        <img src="images/montaje-termoacustic.jpeg" alt="Montaje termoacústico">
     </div>
 </section>
 
-<!-- PROCESO DE TRABAJO -->
+<!-- PROCESO -->
 <section class="proceso">
-    <h2 class="titulo">NUESTRO PROCESO DE TRABAJO</h2>
-
+    <h2 class="titulo">Nuestro Proceso de Trabajo</h2>
     <div class="proceso-grid">
         <div class="paso">
             <span>01</span>
             <h4>Evaluación del Proyecto</h4>
-            <p>Analizamos los requerimientos y condiciones técnicas de la obra.</p>
+            <p>Analizamos requerimientos y condiciones técnicas de la obra.</p>
         </div>
-
         <div class="paso">
             <span>02</span>
             <h4>Planificación</h4>
             <p>Organizamos recursos, materiales y tiempos de ejecución.</p>
         </div>
-
         <div class="paso">
             <span>03</span>
             <h4>Ejecución en Terreno</h4>
             <p>Desarrollo del proyecto con personal calificado y supervisión.</p>
         </div>
-
         <div class="paso">
             <span>04</span>
             <h4>Entrega Final</h4>
-            <p>Entrega del proyecto cumpliendo estándares de calidad y seguridad.</p>
+            <p>Entrega cumpliendo estándares de calidad y seguridad.</p>
         </div>
     </div>
 </section>
 
-<!-- CONTACTO PROFESIONAL -->
+<!-- CONTACTO -->
 <section class="contacto" id="contacto">
-    <h2 class="titulo">CONTACTO</h2>
-
+    <h2 class="titulo">Contacto</h2>
     <div class="contacto-container">
         <div class="contacto-info">
-            <h3>Construcciones AYC SPA.</h3>
+            <h3>Construcciones AYC SPA</h3>
             <p class="telefono">+56 9 8730 8343</p>
-            <p>
-                Contáctanos para cotizaciones, asesoría técnica y desarrollo de
-                proyectos en estructuras metálicas y construcción.
-            </p>
-
-            <a href="https://wa.me/56987308343" target="_blank" class="btn-whatsapp">
-                Contactar por WhatsApp
-            </a>
+            <p>Contáctanos para cotizaciones, asesoría técnica y desarrollo de proyectos en estructuras metálicas y construcción.</p>
+            <a href="https://wa.me/56987308343" target="_blank" class="btn-whatsapp">Contactar por WhatsApp</a>
         </div>
-
         <div class="contacto-img">
-            <img src="images/obra2.jpg" alt="Equipo de construcción">
+            <img src="images/obra4.jpg" alt="Proyecto destacado para contacto">
         </div>
+    </div>
+    <div class="mapa-container">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3421.72600435663!2d-73.1149469!3d-40.5761897!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x96276f9efcddf7bf%3A0x0!2zNDDCsDM0JzE2LjYiUyA3M8KwMDYnNDYuMyJX!5e0!3m2!1ses!2scl!4v1677000000000!5m2!1ses!2scl" width="100%" height="350" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
     </div>
 </section>
 
-<!-- BOTÓN FLOTANTE WHATSAPP -->
-<a href="https://wa.me/56987308343" class="whatsapp-float" target="_blank">
-    💬
-</a>
+<!-- BOTÓN WHATSAPP -->
+<a href="https://wa.me/56987308343" class="whatsapp-float" target="_blank">💬</a>
 
 <!-- FOOTER -->
 <footer class="footer">
     <p>© 2026 Construcciones AYC SPA - Todos los derechos reservados</p>
 </footer>
 
-<script src="script.js"></script>
 </body>
 </html>
